--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+
   <title>Henry's Room</title>
+
   <link rel="stylesheet" type="text/css" href="static/lib/css/bootstrap.min.css"/>
   <link rel="stylesheet" type="text/css" href="static/lib/css/keen-dashboards.css"/>
   <link rel="stylesheet" type="text/css" href="static/css/style.css"/>
