Fix style of summary box

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,16 +33,16 @@
             Current
           </div>
           <div class="chart-stage">
-            <div class="summary">
+            <div class="summary text-center">
               <div class="temp-summary">
-                <span class="temp">75&deg;</span>
-                <span class="temp-high">82&deg;</span>
-                <span class="temp-low">70&deg;</span>
+                <span class="temp-low">???</span>
+                <span class="temp">???</span>
+                <span class="temp-high">???</span>
               </div>
               <div class="humidity-summary">
-                <span class="humidity">34%</span>
-                <span class="humidity-high">45%</span>
-                <span class="humidity-low">21%</span>
+                <span class="humidity-low">???</span>
+                <span class="humidity">???</span>
+                <span class="humidity-high">???</span>
               </div>
             </div>
           </div>
