--- a/client/static/css/style.css
+++ b/client/static/css/style.css
@@ -22,27 +22,8 @@
 /* Loader */
 
 .loader {
-    position: fixed;
-    z-index: 999;
-    height: 2em;
-    width: 2em;
-    overflow: show;
-    margin: auto;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-}
-
-.loader:before {
-    content: '';
-    display: block;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.3);
+    position: relative;
+    top: -80px;
 }
 
 .loader-text {
@@ -51,6 +32,7 @@
 }
 
 .sk-circle {
+  margin: 0 auto;
   width: 40px;
   height: 40px;
   position: relative;
