--- a/ios-app/sensor/sensor/Base.lproj/Main.storyboard
+++ b/ios-app/sensor/sensor/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="sensor" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,7 +16,91 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="76.5°" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mrJ-nV-Ewv">
+                                <rect key="frame" x="207" y="39" width="46.5" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="76.5°" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JQw-5j-ISS">
+                                <rect key="frame" x="347" y="39" width="46.5" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B0d-D3-erS">
+                                <rect key="frame" x="16" y="39" width="183.5" height="24"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QoT-J3-JNU">
+                                <rect key="frame" x="401" y="39" width="183" height="24"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="76.5°" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7h0-gL-TnX">
+                                <rect key="frame" x="263" y="28" width="73.5" height="38.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="21%" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UNc-ly-aUu">
+                                <rect key="frame" x="215" y="95.5" width="42" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="43%" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iWe-eu-yvT">
+                                <rect key="frame" x="343.5" y="95.5" width="42" height="24"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UfS-5m-kdl">
+                                <rect key="frame" x="16" y="95.5" width="191.5" height="24"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5NE-PY-Sk7">
+                                <rect key="frame" x="393" y="95.5" width="191" height="24"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="40%" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nmD-cr-yNe">
+                                <rect key="frame" x="266.5" y="84" width="66.5" height="38.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="iWe-eu-yvT" firstAttribute="bottom" secondItem="5NE-PY-Sk7" secondAttribute="bottom" id="2II-bI-NNi"/>
+                            <constraint firstItem="UfS-5m-kdl" firstAttribute="bottom" secondItem="UNc-ly-aUu" secondAttribute="bottom" id="2R7-yy-AG3"/>
+                            <constraint firstItem="JQw-5j-ISS" firstAttribute="baseline" secondItem="7h0-gL-TnX" secondAttribute="baseline" id="2ig-73-sbX"/>
+                            <constraint firstItem="nmD-cr-yNe" firstAttribute="leading" secondItem="UNc-ly-aUu" secondAttribute="trailing" constant="10" id="4n8-Kj-4zK"/>
+                            <constraint firstItem="7h0-gL-TnX" firstAttribute="baseline" secondItem="mrJ-nV-Ewv" secondAttribute="baseline" id="5mU-hw-Vn2"/>
+                            <constraint firstItem="7h0-gL-TnX" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" symbolic="YES" id="7P1-zw-eZk"/>
+                            <constraint firstItem="UfS-5m-kdl" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Egw-nO-dUu"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="QoT-J3-JNU" secondAttribute="trailing" id="GDP-Gg-nQa"/>
+                            <constraint firstItem="B0d-D3-erS" firstAttribute="bottom" secondItem="mrJ-nV-Ewv" secondAttribute="bottom" id="I8e-aQ-fUJ"/>
+                            <constraint firstItem="iWe-eu-yvT" firstAttribute="top" secondItem="5NE-PY-Sk7" secondAttribute="top" id="L64-OI-kzd"/>
+                            <constraint firstItem="JQw-5j-ISS" firstAttribute="bottom" secondItem="QoT-J3-JNU" secondAttribute="bottom" id="MAS-5X-fZX"/>
+                            <constraint firstItem="UfS-5m-kdl" firstAttribute="top" secondItem="UNc-ly-aUu" secondAttribute="top" id="PYj-ru-RwU"/>
+                            <constraint firstItem="JQw-5j-ISS" firstAttribute="leading" secondItem="7h0-gL-TnX" secondAttribute="trailing" constant="10" id="RWw-Ff-u8V"/>
+                            <constraint firstItem="JQw-5j-ISS" firstAttribute="top" secondItem="QoT-J3-JNU" secondAttribute="top" id="SvL-ky-eh9"/>
+                            <constraint firstItem="B0d-D3-erS" firstAttribute="top" secondItem="mrJ-nV-Ewv" secondAttribute="top" id="Tqf-SA-6fM"/>
+                            <constraint firstItem="UfS-5m-kdl" firstAttribute="width" secondItem="5NE-PY-Sk7" secondAttribute="width" id="VRp-Rv-Zea"/>
+                            <constraint firstItem="iWe-eu-yvT" firstAttribute="leading" secondItem="nmD-cr-yNe" secondAttribute="trailing" constant="10" id="aJ1-TH-OLJ"/>
+                            <constraint firstItem="5NE-PY-Sk7" firstAttribute="leading" secondItem="iWe-eu-yvT" secondAttribute="trailing" constant="8" symbolic="YES" id="bua-nv-lVL"/>
+                            <constraint firstItem="mrJ-nV-Ewv" firstAttribute="leading" secondItem="B0d-D3-erS" secondAttribute="trailing" constant="8" symbolic="YES" id="fVf-dM-ehS"/>
+                            <constraint firstItem="iWe-eu-yvT" firstAttribute="baseline" secondItem="nmD-cr-yNe" secondAttribute="baseline" id="gJ4-MC-dl0"/>
+                            <constraint firstItem="5NE-PY-Sk7" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="h9d-Jq-IlL"/>
+                            <constraint firstItem="QoT-J3-JNU" firstAttribute="leading" secondItem="JQw-5j-ISS" secondAttribute="trailing" constant="8" symbolic="YES" id="hRx-mh-Mxv"/>
+                            <constraint firstItem="nmD-cr-yNe" firstAttribute="top" secondItem="7h0-gL-TnX" secondAttribute="bottom" constant="17.5" id="jsb-Kh-FgG"/>
+                            <constraint firstItem="B0d-D3-erS" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="nMv-c1-Ho9"/>
+                            <constraint firstItem="7h0-gL-TnX" firstAttribute="leading" secondItem="mrJ-nV-Ewv" secondAttribute="trailing" constant="10" id="ncm-7k-Jz2"/>
+                            <constraint firstItem="B0d-D3-erS" firstAttribute="width" secondItem="QoT-J3-JNU" secondAttribute="width" id="qVB-oa-1hR"/>
+                            <constraint firstItem="UNc-ly-aUu" firstAttribute="leading" secondItem="UfS-5m-kdl" secondAttribute="trailing" constant="8" symbolic="YES" id="rVo-GD-vzF"/>
+                            <constraint firstItem="nmD-cr-yNe" firstAttribute="baseline" secondItem="UNc-ly-aUu" secondAttribute="baseline" id="tCH-6h-Mrr"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
